# documentation

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  ContentIndex.rst  Dockerfile  Makefile  MischaDummyFileForTesting.txt  MischaTest.txt  Pipfile  README.md  ReadMeToStart.md  Release_notes.rst  aimms_func.rst  aimms_modeling.rst  aimms_ref.rst  aimms_user.rst  build-docker.sh  build-win.bat  build.sh  conf.py  deprecation-table.rst  dummy.txt  index.rst  info-sec.rst  library-repository.rst  meta-index-file.txt  open-solver-interface.rst  pro-release-notes.rst  pyproject.toml  release-notes.rst  robots.txt  run.sh  sdk.rst  siteindex.xml  solvers.rst  spellingFilters.py  spelling_wordlist.txt  technical-specifications.rst
_static/: Hacks.css  aimms_2019_10_25.css
_templates/: breadcrumbs.html  footer.html  layout.html  searchbox.html
aimmsxllibrary/: axll-documentation.rst  example.rst  index.rst  release.rst  using.rst
axll/: axll-documentation.rst  index.rst  using.rst
cdm/: api.rst  auth.rst  callback.rst  config.rst  dtd.rst  external.rst  impl.rst  index.rst  install.rst  rationale.rst  release.rst
cloud/: accesing-cloud-hosted-services.rst  accessing-cloud-hosted-services.rst  activation.rst  additional-features.rst  admin-config-2.rst  admin-config.rst  admin.rst  advanced-workflows.rst  aimms-releases.rst  architecture.rst  basic-workflow.rst  cloud-intro.rst  db-config.rst  debugging-pro.rst  gurobi-support.rst  index.rst  integrations-config.rst  launch-service.rst  library.rst  managing-api-keys.rst  managing-apps.rst  managing-secrets.rst  managing-sessions.rst  managing-tasks.rst  managing-users.rst  newportal-apps.rst  newportal-configuration  newportal-configuration.rst  newportal-legacy-sessions.rst  newportal-stats.rst  (+21 more)
(+331 files in other folders)
